--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,10 @@
     "perfect-freehand": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "roughjs": "^4.6.6"
+    "react-icons": "^4.12.0",
+    "react-tooltip": "^5.25.0",
+    "roughjs": "^4.6.6",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
