--- a/package.json
+++ b/package.json
@@ -1,23 +1,33 @@
 {
-    "name": "task6",
-    "version": "1.0.0",
-    "description": "Collaborative drawing board application",
-    "scripts": {
-        "start": "node backend/server.js",
-        "server": "nodemon backend/server.js",
-        "client": "yarn --cwd frontend dev",
-        "dev": "concurrently \"yarn run server\" \"yarn run client\""
-    },
-    "author": "maxpn",
-    "license": "MIT",
-    "dependencies": {
-        "express": "^4.18.2",
-        "socket.io": "^4.7.2",
-        "sqlite": "^5.1.1",
-        "sqlite3": "^5.1.6"
-    },
-    "type": "module",
-    "devDependencies": {
-        "nodemon": "^3.0.2"
-    }
+  "name": "frontend",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "perfect-freehand": "^1.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-tooltip": "^5.25.0",
+    "roughjs": "^4.6.6"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.7",
+    "vite": "^5.0.8"
+  }
 }
